gcc/testsuite/rust/rustc/ui/issues/issue-36299.rs
struct Foo<'a, A> {}
// { dg-error ".E0392." "" { target *-*-* } .-1 }
// { dg-error ".E0392." "" { target *-*-* } .-2 }

fn main() {}

